[package]
name = "hpm5361-pac"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/hpm5361-pac"
documentation = "https://docs.rs/hpm5361-pac"
homepage = "https://github.com/andelf/hpm5361-pac"
categories = []
description = "Peripheral access API for HPM5361 microcontrollers"
keywords = ["hpm5331", "hpm5321", "hpm5301"]
readme = "README.md"
license = "BSD-3-Clause"

[lib]
path = "lib.rs"

[features]
rt = ["critical-section"]


[dependencies]
critical-section = { version = "1.1.2", optional = true }
vcell = "0.1.3"
